Updating an image and adding a note

--- a/greasemonkey/fogbugz-helper/index.html
+++ b/greasemonkey/fogbugz-helper/index.html
@@ -38,8 +38,9 @@ custom-css-list:
     <h2 class="headline"><div class="content"><a href="#features">Features</a></div></h2>
 
     <div class="body cms"><div class="content" id="features_content">
-      <p>To enable/disable features, mouse-over the tools menu in FogBugz:</p>
-      <p><img src="/greasemonkey/fogbugz-helper/img/tools_dropdown.png" width="610" height="863"></p>
+      <p>To enable/disable features, mouse-over the tools menu in FogBugz.</p>
+      <p>Also, the "ZipRecruiter FogBugz Helper" text links to this page.</p>
+      <p><img src="/greasemonkey/fogbugz-helper/img/tools_dropdown.png"></p>
     </div></div>
   </section>
 
