adding iframe communication

--- a/parent.html
+++ b/parent.html
@@ -9,3 +9,9 @@
   frameborder="0"
   allow="microphone; camera"
   src="https://www-gerald-03.legacy-dev-uw2.zipaws.com/test/iframe-cookies"></iframe>
+
+<script>
+  window.addEventListener('message', function(e) {
+    console.log(data);
+  }, false);
+</script>
