Fixing target url

--- a/greasemonkey/jira-helper/index.html
+++ b/greasemonkey/jira-helper/index.html
@@ -92,7 +92,7 @@ custom-css-list:
 // @version      0.1
 // @description  Various alterations to JIRA's UI
 // @author       ZipRecruiter
-// @match        https://*.jira.com/*
+// @match        https://ziprecruiter.atlassian.net/*
 // @grant        none
 // @run-at       document-start
 // ==/UserScript==
