Adding var to url

--- a/greasemonkey/jira-helper/index.html
+++ b/greasemonkey/jira-helper/index.html
@@ -97,7 +97,7 @@ custom-css-list:
 // @run-at       document-start
 // ==/UserScript==
 
-(function(){url='//ziprecruiter.github.io/greasemonkey/jira-helper/jira-helper.js';document.head.appendChild(document.createElement('script')).src=url+'?'+new Date().getTime();})();
+(function(){var url='//ziprecruiter.github.io/greasemonkey/jira-helper/jira-helper.js';document.head.appendChild(document.createElement('script')).src=url+'?'+new Date().getTime();})();
         </textarea>
       </div></div>
     </section>
