Add settings dropdown documentation

--- a/greasemonkey/jira-helper/index.html
+++ b/greasemonkey/jira-helper/index.html
@@ -38,9 +38,9 @@ custom-css-list:
     <h2 class="headline"><div class="content"><a href="#features">Features</a></div></h2>
 
     <div class="body cms"><div class="content" id="features_content">
-      <!-- p>To enable/disable features, mouse-over the tools menu in JIRA.</p>
+      <p>To enable/disable features, click the Settings menu in JIRA.</p>
       <p>Also, the "ZipRecruiter JIRA Helper" text links to this page.</p>
-      <p><img src="/greasemonkey/jira-helper/img/tools_dropdown.png"></p -->
+      <p><img src="/greasemonkey/jira-helper/img/tools_dropdown.png"></p>
     </div></div>
   </section>
 
