Changing to https

--- a/greasemonkey/jira-helper/index.html
+++ b/greasemonkey/jira-helper/index.html
@@ -88,7 +88,7 @@ custom-css-list:
         <textarea id="user_script">
 // ==UserScript==
 // @name         JIRA Helper
-// @namespace    http://ziprecruiter.github.io/
+// @namespace    https://ziprecruiter.github.io/
 // @version      0.1
 // @description  Various alterations to JIRA's UI
 // @author       ZipRecruiter
@@ -97,7 +97,7 @@ custom-css-list:
 // @run-at       document-start
 // ==/UserScript==
 
-(function(){var url='//ziprecruiter.github.io/greasemonkey/jira-helper/jira-helper.js';document.head.appendChild(document.createElement('script')).src=url+'?'+new Date().getTime();})();
+(function(){var url='https://ziprecruiter.github.io/greasemonkey/jira-helper/jira-helper.js';document.head.appendChild(document.createElement('script')).src=url+'?'+new Date().getTime();})();
         </textarea>
       </div></div>
     </section>
